Add provisional version of working server
