# Lab 8/Solutions/backend/swagger_server/controllers/messenger_controller.py
@@ -1,34 +1,43 @@
 import connexion
 import six
 
-from swagger_server.models.object import Object  # noqa: E501
 from swagger_server import util
+from json import dumps
+
+from swagger_server.global_server import *
 
 
-def receive_get(token=None, nadawca=None):  # noqa: E501
+def receive_get(token=None, sender=None):
     """Receives messages
 
-    Receivies all messages from server # noqa: E501
+    Receivies all messages from server
 
     :param token: User token
-    :type token: float
-    :param nadawca: Message sender, optional
-    :type nadawca: str
+    :type token: int
+    :param sender: Message sender, optional
+    :type sender: str
 
     :rtype: Object
     """
-    return 'do some magic!'
+    if token is None:
+        return "invalid_token", 404
+    response = GLOBAL_SERVER.get_all_messages(token, sender)
+    if response == 1:
+        return "invalid_token", 404
+    elif response == 0:
+        return "empty", 201
+    return dumps(list(map(lambda d: {"sender":d.sender, "receiver":d.receiver, "message": d.message, "send_time": str(d.send_date)}, response)))
 
 
-def receivers_get():  # noqa: E501
+def receivers_get():
     """List all receivers
 
-    Lists all messages receivers in the system # noqa: E501
+    Lists all messages receivers in the system
 
 
     :rtype: str
     """
-    return 'do some magic!'
+    return ";".join(GLOBAL_SERVER.list_clients())
 
 
 def send_post(token=None, receiver=None, message=None):  # noqa: E501
@@ -37,7 +46,7 @@ def send_post(token=None, receiver=None, message=None):  # noqa: E501
     Sends message to the server # noqa: E501
 
     :param token: User token
-    :type token: float
+    :type token: int
     :param receiver: Message receiver login
     :type receiver: str
     :param message: Message to send
@@ -45,4 +54,12 @@ def send_post(token=None, receiver=None, message=None):  # noqa: E501
 
     :rtype: None
     """
-    return 'do some magic!'
+    if message is None or receiver is None or token is None:
+        return "invalid_arguments", 400
+    response = GLOBAL_SERVER.send_message(int(token), receiver, message)
+    if response == 2:
+        return "target_not_found", 404
+    elif response != 0:
+        return "invalid_arguments", 400
+    else:
+        return "sent"
